--- a/css/ind.css
+++ b/css/ind.css
@@ -107,17 +107,17 @@ nav{
 
 #but2{
     
-    display:block;
+    display: inline-block;
     width: 100px;
     height: 30px;
     background: white;
     text-align: center;
     text-decoration: none;
     color: black;
-    margin: auto;
-    margin-top: 10px;
     padding: 5px;
     border-radius: 5px;
+    margin-bottom: 50px;
+    margin-left: 20px;
 }
 
 #but2:hover{
